--- a/04-STM32F0xx_USART/Targets/Nucleo_F070/project.build_log.htm
+++ b/04-STM32F0xx_USART/Targets/Nucleo_F070/project.build_log.htm
@@ -3,7 +3,6 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-Build Time Elapsed:  00:00:01
 IDE-Version: µVision V5.14.0.0
 Copyright (C) 2015 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: Tilen Majerle, FE UNI LJ, LIC=P6F30-BFVI5-C1VPU-SS9YS-1HVEY-0E8VK
@@ -22,18 +21,25 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
-C:\Users\tilz0R\Google Drive\JAVNO\ELEKTRONIKA\ARM\STM32F429\majerle.eu_F0\01-STM32F0xx_Keil_CMSIS_Default_Project\project.uvprojx
-Project File Date:  05/15/2015
+C:\Users\tilz0R\Google Drive\Electronics\ARM\stm32f4-discovery.com_F0\04-STM32F0xx_USART\project.uvprojx
+Project File Date:  05/20/2015
 
 <h2>Output:</h2>
 Build target 'Nucleo-F070RB'
+compiling tm_stm32f0_usart.c...
+..\00-STM32F0xx_LIBRARIES\tm_stm32f0_usart.c(95): warning:  #177-D: variable "USART_InitStruct" was declared but never referenced
+        USART_InitTypeDef USART_InitStruct;
+..\00-STM32F0xx_LIBRARIES\tm_stm32f0_usart.c(96): warning:  #550-D: variable "NVIC_InitStruct" was set but never used
+        NVIC_InitTypeDef NVIC_InitStruct;
+..\00-STM32F0xx_LIBRARIES\tm_stm32f0_usart.c: 2 warnings, 0 errors
+compiling main.c...
 linking...
-Program Size: Code=744 RO-data=224 RW-data=20 ZI-data=1028  
+Program Size: Code=1008 RO-data=224 RW-data=84 ZI-data=1156  
 FromELF: creating hex file...
-".\Targets\Nucleo_F070\project.axf" - 0 Error(s), 0 Warning(s).
+".\Targets\Nucleo_F070\project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\tilz0R\Google Drive\JAVNO\ELEKTRONIKA\ARM\STM32F429\majerle.eu_F0\01-STM32F0xx_Keil_CMSIS_Default_Project\RTE
+  C:\Users\tilz0R\Google Drive\Electronics\ARM\stm32f4-discovery.com_F0\04-STM32F0xx_USART\RTE
   C:\Keil_v5\ARM\PACK\Keil\STM32F0xx_DFP\1.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
