--- a/04-STM32F0xx_USART/Targets/Nucleo_F091/project.build_log.htm
+++ b/04-STM32F0xx_USART/Targets/Nucleo_F091/project.build_log.htm
@@ -21,23 +21,18 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
-C:\Users\tilz0R\Google Drive\JAVNO\ELEKTRONIKA\ARM\STM32F429\majerle.eu_F0\04-STM32F0xx_USART\project.uvprojx
+C:\Users\tilz0R\Google Drive\Electronics\ARM\stm32f4-discovery.com_F0\04-STM32F0xx_USART\project.uvprojx
 Project File Date:  05/20/2015
 
 <h2>Output:</h2>
 Build target 'Nucleo-F091RC'
-compiling tm_stm32f0_usart.c...
-..\00-STM32F0xx_LIBRARIES\tm_stm32f0_usart.c(35): warning:  #177-D: variable "USART_InitStruct" was declared but never referenced
-        USART_InitTypeDef USART_InitStruct;
-..\00-STM32F0xx_LIBRARIES\tm_stm32f0_usart.c: 1 warning, 0 errors
-compiling main.c...
 linking...
-Program Size: Code=1088 RO-data=220 RW-data=52 ZI-data=1028  
+Program Size: Code=1144 RO-data=220 RW-data=148 ZI-data=1284  
 FromELF: creating hex file...
-".\Targets\Nucleo_F091\project.axf" - 0 Error(s), 1 Warning(s).
+".\Targets\Nucleo_F091\project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\tilz0R\Google Drive\JAVNO\ELEKTRONIKA\ARM\STM32F429\majerle.eu_F0\04-STM32F0xx_USART\RTE
+  C:\Users\tilz0R\Google Drive\Electronics\ARM\stm32f4-discovery.com_F0\04-STM32F0xx_USART\RTE
   C:\Keil_v5\ARM\PACK\Keil\STM32F0xx_DFP\1.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
